# mesonfortranmwe

./: README.md  meson.build  pyproject.toml
mesonfortranmwe/: __init__.py  meson.build
mwe/: __init__.py  fortran.f90  meson.build
