[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'mesonfortranmwe'
version = '0.0.1'
description = 'Testing fortran build with meson'
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [
    { name = "Til Birnstiel", email = "til.birnstiel@lmu.de" },
]
license = { file = 'LICENSE' }
dependencies = ['numpy']